Fin de la première après-midi + cdc projet perso

--- a/1-Decouverte-du-langage.ipynb
+++ b/1-Decouverte-du-langage.ipynb
@@ -177,6 +177,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Axel\n",
+      "\n",
+      "Louis\n",
+      "\n",
+      "Manu\n",
+      "\n",
+      "Corentin\n",
+      "\n",
+      "Morgane\n"
+     ]
+    }
+   ],
+   "source": [
+    "contenu = open(\"maListe.txt\", \"r\")\n",
+    "for ligne in contenu:\n",
+    "    print(ligne)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -184,63 +211,152 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "un\n",
-      "\n",
-      "k\n",
-      "deux\n",
-      "\n",
-      "k\n",
-      "trois\n",
-      "k\n"
+      "J'ai retrouvé le prof !\n"
      ]
     }
    ],
    "source": [
-    "mychar = 'a'\n",
-    "mystring = \"balek\"\n",
-    "contenu = open(\"maListe.txt\", \"r\")\n",
-    "for ligne in contenu:\n",
-    "    print(ligne)\n",
-    "    print(mystring[4])"
+    "with open(\"maListe.txt\", \"r\", encoding=\"utf-8\") as infile:\n",
+    "    for line in infile:\n",
+    "        if line.startswith(\"Manu\"):\n",
+    "            print(\"J'ai retrouvé le prof !\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "He's over nine thousaaaands !!\n"
+      "plus que 9000 !\n"
      ]
     }
    ],
    "source": [
     "var = 9000\n",
-    "if(var==1000): print(\"Value of expression is 100\")\n",
+    "if (var == 1000):\n",
+    "    print(\"La valeur de la variable est 1000.\")\n",
     "\n",
-    "if(var<1200):\n",
+    "if (var < 1200):\n",
     "    print(\"smicard !\")\n",
-    "elif(var<9000):\n",
+    "elif (var < 9000):\n",
     "    print(\"average !\")\n",
     "else:\n",
-    "    print(\"He's over nine thousaaaands !!\")"
+    "    print(\"plus que 9000 !\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Structure \"for\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lettre actuelle :  P\n",
+      "Lettre actuelle :  y\n",
+      "Lettre actuelle :  t\n",
+      "Lettre actuelle :  h\n",
+      "Lettre actuelle :  o\n",
+      "Lettre actuelle :  n\n"
+     ]
+    }
+   ],
+   "source": [
+    "for letter in \"Python\":\n",
+    "    print(\"Lettre actuelle : \", letter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fruit actuel :  banane\n",
+      "Fruit actuel :  pomme\n",
+      "Fruit actuel :  mangue\n",
+      "C'était bon !\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"banane\", \"pomme\", \"mangue\"]\n",
+    "for fruit in fruits:\n",
+    "    print(\"Fruit actuel : \", fruit)\n",
+    "print(\"C'était bon !\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actuellement :  0\n",
+      "Actuellement :  1\n",
+      "Actuellement :  2\n",
+      "Actuellement :  3\n",
+      "Actuellement :  4\n",
+      "Actuellement :  5\n",
+      "Actuellement :  6\n",
+      "Actuellement :  7\n",
+      "Actuellement :  8\n",
+      "It's the final couuuuuntdoooown ! Du du duuuuu du ... Du du du du duuuuuu...\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "while (count < 9):\n",
+    "    print(\"Actuellement : \", count)\n",
+    "    count = count + 1\n",
+    "print(\"It's the final couuuuuntdoooown ! Du du duuuuu du ... Du du du du duuuuuu...\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fonctions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bonjour à vous, Coco\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bonjour_vous(nom):\n",
+    "    print(\"Bonjour à vous,\", nom)\n",
+    "    return\n",
+    "\n",
+    "bonjour_vous(\"Manu\")"
    ]
   },
   {
